--- a/main.css
+++ b/main.css
@@ -60,3 +60,19 @@ header {
 .social-links a{
     text-decoration: none;
 }
+
+@media(max-width: 767px){
+    .carousel-item img{
+        height: 280px;
+    }
+}
+
+@media (min-width: 992px) {
+    #menu-navegacao {
+        display: block !important;
+    }
+    .navbar-toggler {
+        display: none;
+    }
+}
+
